9 Jun 2018
fix: query using incorrect id
fix: classcolors.css overwrite on git pull
fix: classes.js overwrite on git pull
fix: missing ip class_check.php in query
fix: typos
fix: tracker bencode issue, you will need to manually merge this with your include/ann_config.php
update: ssluse for everything, always if using https
fix: announce.php
replace: deprecated function each()
fix: incorrect lang var
add: missing sqlerr in many forum queries
fix: bbcode code block breaking layout

8 Jun 2018
add: rounded corners to youtube
fix: youtube display
fix: class add/remove not updating AJAX Chat classes
fix: flush cache when driver is 'file'
fix: adding/removing user class not updating class colors
fix: ambiguous 'status' view_forum.php
add: missing sqlerr in many queries
fix: missing space in query view_topic.php
fix: missing global
add: AJAX Chat command takeover to allow staff to speak as BOT
add: AJAX Chat command announce to allow staff to speak as BOT and send as a PM to all users
add: missing help info to AJAX Chat commands

7 Jun 2018
fix: missing quotes
add: bin/set_perms.php script to set file permissions to 0664
add: bin/uglify.php script to process css/js files

6 Jun 2018
fix: missing '/'
fix: incorrect column name used
fix: properly display html chars in forum posts
fix: missing js file
fix: userdetails.php using CURUSER details instead of id.user details
fix: missing semicolon in takesignup.php
fix: missing js file signup.php
update: missing response var
fix: reCAPTCHA success check
update: README.md

5 Jun 2018
replace: jquery.simpleCaptcha-0.2.js with reCAPTCHA V2
fix: userdetails.php tabs not working
fix: > UC_UPLOADER should not be demoted to UC_VIP when donating
fix: remove Cache class instantiation

4 Jun 2018
update: when cleanup item is missed, next cleanup time is set to time later than now
fix: cleanup manager not updating or creating cleanup items
update: timeout for all index page blocks