@@ -1,4 +1,5 @@
 9 Jun 2018
+fix: site forcing new users to https
 fix: query using incorrect id
 fix: classcolors.css overwrite on git pull
 fix: classes.js overwrite on git pull
